// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutHelper should combineMenuItems 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "exact": true,
        "name": "Dashboard",
        "type": "item",
        "url": "/",
      },
      Object {
        "name": "Facts",
        "type": "item",
        "url": "/fact_values",
      },
    ],
    "className": "",
    "icon": "fa fa-tachometer",
    "name": "Monitor",
    "type": "sub_menu",
  },
  Object {
    "children": Array [
      Object {
        "name": "All Hosts",
        "type": "item",
        "url": "/hosts/new",
      },
    ],
    "className": "",
    "icon": "fa fa-server",
    "name": "Hosts",
    "type": "sub_menu",
  },
  Object {
    "children": Array [
      Object {
        "name": undefined,
        "type": "item",
        "url": "/nameless",
      },
      Object {
        "name": undefined,
        "type": "divider",
      },
    ],
    "className": "",
    "icon": "pficon pficon-unplugged",
    "name": "Empty",
    "type": "sub_menu",
  },
  Object {
    "children": Array [
      Object {
        "name": "Any Organization",
        "onClick": [Function],
      },
      Object {
        "name": "org1",
        "onClick": [Function],
        "type": undefined,
      },
      Object {
        "name": "org2",
        "onClick": [Function],
        "type": undefined,
      },
    ],
    "className": "organization-menu hidden-nav-lg",
    "icon": "fa fa-building",
    "name": "Organizations",
    "type": "sub_menu",
  },
  Object {
    "children": Array [
      Object {
        "name": "Any Location",
        "onClick": [Function],
      },
      Object {
        "name": "yaml",
        "onClick": [Function],
        "type": undefined,
      },
      Object {
        "name": "london",
        "onClick": [Function],
        "type": undefined,
      },
      Object {
        "name": "norway",
        "onClick": [Function],
        "type": undefined,
      },
    ],
    "className": "location-menu hidden-nav-lg",
    "icon": "fa fa-globe",
    "name": "Locations",
    "type": "sub_menu",
  },
]
`;

exports[`LayoutHelper should getActiveMenuItem(Hosts, "/hosts/new") 1`] = `
Object {
  "title": "Hosts",
}
`;

exports[`LayoutHelper should getActiveMenuItem(Monitor, null) 1`] = `
Object {
  "title": "Monitor",
}
`;

exports[`LayoutHelper should getActiveMenuItem(null) 1`] = `
Object {
  "title": "",
}
`;
